--- a/sia-tech-blog/package.json
+++ b/sia-tech-blog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sia-tech-blog",
   "version": "0.1.0",
-  "homepage" : "https://github.com/sia-litian/sia-tech-blog",
+  "homepage" : "https://sia-litian.github.com/sia-tech-blog",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
